fix(userpicker): style & overflow issues (#3726)

--- a/components/interactables/UserPicker/UserPicker.less
+++ b/components/interactables/UserPicker/UserPicker.less
@@ -1,5 +1,4 @@
 .user-picker {
-  height: 200px;
   display: flex;
   flex-direction: column;
   gap: @light-spacing;
@@ -17,5 +16,9 @@
     text-align: center;
     color: @gray;
     margin: @light-spacing;
+  }
+
+  .scroll-wrapper {
+    height: 220px;
   }
 }
